# InterpolationFunctions

./: CMakeLists.txt  README.md
src/: main.c
utils/: valuegen.py
